; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/staging/iio/accel/extr_sca3000_core.c___sca3000_get_base_freq.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/staging/iio/accel/extr_sca3000_core.c___sca3000_get_base_freq.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.sca3000_state = type { i32 }
%struct.sca3000_chip_info = type { i32, i32, i32 }

@SCA3000_REG_ADDR_MODE = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.sca3000_state*, %struct.sca3000_chip_info*, i32*)* @__sca3000_get_base_freq to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @__sca3000_get_base_freq(%struct.sca3000_state* %0, %struct.sca3000_chip_info* %1, i32* %2) #0 {
  %4 = alloca %struct.sca3000_state*, align 8
  %5 = alloca %struct.sca3000_chip_info*, align 8
  %6 = alloca i32*, align 8
  %7 = alloca i32, align 4
  %8 = alloca i32*, align 8
  store %struct.sca3000_state* %0, %struct.sca3000_state** %4, align 8
  store %struct.sca3000_chip_info* %1, %struct.sca3000_chip_info** %5, align 8
  store i32* %2, i32** %6, align 8
  %9 = load %struct.sca3000_state*, %struct.sca3000_state** %4, align 8
  %10 = load i32, i32* @SCA3000_REG_ADDR_MODE, align 4
  %11 = call i32 @sca3000_read_data(%struct.sca3000_state* %9, i32 %10, i32** %8, i32 1)
  store i32 %11, i32* %7, align 4
  %12 = load i32, i32* %7, align 4
  %13 = icmp ne i32 %12, 0
  br i1 %13, label %14, label %15

14:                                               ; preds = %3
  br label %38

15:                                               ; preds = %3
  %16 = load i32*, i32** %8, align 8
  %17 = getelementptr inbounds i32, i32* %16, i64 1
  %18 = load i32, i32* %17, align 4
  %19 = and i32 3, %18
  switch i32 %19, label %35 [
    i32 130, label %20
    i32 129, label %25
    i32 128, label %30
  ]

20:                                               ; preds = %15
  %21 = load %struct.sca3000_chip_info*, %struct.sca3000_chip_info** %5, align 8
  %22 = getelementptr inbounds %struct.sca3000_chip_info, %struct.sca3000_chip_info* %21, i32 0, i32 0
  %23 = load i32, i32* %22, align 4
  %24 = load i32*, i32** %6, align 8
  store i32 %23, i32* %24, align 4
  br label %35

25:                                               ; preds = %15
  %26 = load %struct.sca3000_chip_info*, %struct.sca3000_chip_info** %5, align 8
  %27 = getelementptr inbounds %struct.sca3000_chip_info, %struct.sca3000_chip_info* %26, i32 0, i32 1
  %28 = load i32, i32* %27, align 4
  %29 = load i32*, i32** %6, align 8
  store i32 %28, i32* %29, align 4
  br label %35

30:                                               ; preds = %15
  %31 = load %struct.sca3000_chip_info*, %struct.sca3000_chip_info** %5, align 8
  %32 = getelementptr inbounds %struct.sca3000_chip_info, %struct.sca3000_chip_info* %31, i32 0, i32 2
  %33 = load i32, i32* %32, align 4
  %34 = load i32*, i32** %6, align 8
  store i32 %33, i32* %34, align 4
  br label %35

35:                                               ; preds = %15, %30, %25, %20
  %36 = load i32*, i32** %8, align 8
  %37 = call i32 @kfree(i32* %36)
  br label %38

38:                                               ; preds = %35, %14
  %39 = load i32, i32* %7, align 4
  ret i32 %39
}

declare dso_local i32 @sca3000_read_data(%struct.sca3000_state*, i32, i32**, i32) #1

declare dso_local i32 @kfree(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
